--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "redux": "^4.2.1",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.29.5-appdir.0"
   }
 }
